[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/mainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/GameHUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = -38.0
margin_right = 194.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "COIN DASH"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 60.0

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
margin_right = 440.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "0"
valign = 1

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_right = 440.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 2
valign = 1

[node name="LevelLabel" type="Label" parent="MarginContainer"]
margin_right = 440.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = 140.0
margin_right = 82.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 1 )
text = "START"
